--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,9 @@
 		"education": "Образование",
 		"skills": "Навыки",
 		"contacts": "Контакты"
+	},
+	"about": {
+		"first__text": "Занимаюсь разработкой приложений последние 4 года. Из них 3 — мобильными приложениями. Начинал карьеру как веб-разработчик (преимущественно frontend), писал веб-приложения на Vanilla JS, React и NextJS. Позже пробовал писать гибридные приложения, используя Apache Cordova (PhoneGap), но достаточно быстро переключился на нативные кроссплатформенные приложения на React-Native. Параллельно с основной работой, как React-Native разработчик, занимался нативной разработкой iOS-приложений.",
+		"second__text": ""
 	}
 }
