started adapt design

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,7 +13,7 @@
 		"contacts": "Контакты"
 	},
 	"about": {
-		"first__text": "Занимаюсь разработкой приложений последние 4 года. Из них 3 — мобильными приложениями. Начинал карьеру как веб-разработчик (преимущественно frontend), писал веб-приложения на Vanilla JS, React и NextJS. Позже пробовал писать гибридные приложения, используя Apache Cordova (PhoneGap), но достаточно быстро переключился на нативные кроссплатформенные приложения на React-Native. Параллельно с основной работой, как React-Native разработчик, занимался нативной разработкой iOS-приложений.",
-		"second__text": ""
+		"first__text": "Занимаюсь разработкой приложений последние 4 года. Из них большую часть — мобильными приложениями. Начинал карьеру как веб-разработчик (преимущественно frontend), писал веб-приложения на Vanilla JS, React и NextJS. Позже пробовал писать гибридные мобильные приложения, используя Apache Cordova (PhoneGap), но достаточно быстро переключился на нативные кроссплатформенные приложения на React-Native. Параллельно с основной работой занимаюсь веб-приложения и нативными приложениями на iOS (Swift).",
+		"second__text": "Много путешествую и достаточно часто переезжаю, поэтому, как правило, не привязываюсь к конкретному часовому поясу. На текущий момент являюсь ведущим разработчиком мобильных приложений. Если Вы читаете этот текст, скорее всего я открыт для предложений о совместном сотрудничестве."
 	}
-}
+}s
