--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,7 +13,91 @@
 		"contacts": "Контакты"
 	},
 	"about": {
+		"title": "Коротко о себе.",
 		"first__text": "Занимаюсь разработкой приложений последние 4 года. Из них большую часть — мобильными приложениями. Начинал карьеру как веб-разработчик (преимущественно frontend), писал веб-приложения на Vanilla JS, React и NextJS. Позже пробовал писать гибридные мобильные приложения, используя Apache Cordova (PhoneGap), но достаточно быстро переключился на нативные кроссплатформенные приложения на React-Native. Параллельно с основной работой занимаюсь веб-приложения и нативными приложениями на iOS (Swift).",
-		"second__text": "Много путешествую и достаточно часто переезжаю, поэтому, как правило, не привязываюсь к конкретному часовому поясу. На текущий момент являюсь ведущим разработчиком мобильных приложений. Если Вы читаете этот текст, скорее всего я открыт для предложений о совместном сотрудничестве."
+		"second__text": "Много путешествую и достаточно часто переезжаю, поэтому, как правило, не привязываюсь к конкретному часовому поясу. На текущий момент являюсь ведущим разработчиком мобильных приложений в компании Integral (подробнее раздел \"Опыт\"). Если Вы читаете этот текст, скорее всего я открыт для предложений о совместном сотрудничестве.",
+		"third__text": "В разделе портфолио можно ознакомиться с моими работами. Так как на данный момент я работаю в основном с мобильными приложениями, проекты, связанные с веб-разработкой, не включены в перечень."
+	},
+	"portfolio": {
+		"description": "Ниже перечислены приложения, зарелизенные в Google Play / App Store, open-source проекты, а также приложения, не доступные в мобильных сторах (частные приложения, либо находящиеся на этапе разработки / тестирования).",
+		"store_applications": "ПРИЛОЖЕНИЯ В СТОРАХ:",
+		"open_source": "OPEN SOURCE:",
+		"not_in_stores": "НЕ ВОШЕДШЕЕ В СТОРЫ:",
+		"go_to_store": "Перейти в стор",
+		"Hydro Pay": "Первое мобильное криптовалютное приложение позволюящие совершать простые, быстрые, безкомиссионные P2P транзакции в блокчейне ethereum.",
+		"Curso De Ingles Gratis": "Приложение английских курсов, включающих грамматику, аудио-уроки и экзамены. Подходит для изучающих начинающего и среднего уровня.",
+		"Karma (Social App)": "KARMA — это социальная сеть, построенная на блокчейне. Приложения призвано вдохновлять людей совершать хорошие поступки и зарабатывать \"карму\" (внутренняя валюта).",
+		"Learn Spanish Free": "Приложение испанских курсов для тех, кто хочет получить простой способ изучения иностранных языков. Курсы включают грамматику, аудио-уроки и экзамены для проверки уровня знаний пользователя.",
+		"Amplified Bible": "Лучшая Библия-приложение и самый эффективный способ читать и изучать библию.",
+		"The King James Bible": "Приложение дает улучшенный опыт изучения Библии благодаря сохранению прогресса чтения, постоянный доступ к любым главам, возможность добавлять закладки и многое другое.",
+		"La Santa Biblia": "La Santa Biblia разработана для тех, кто хочет иметь с собой удобную библию повсюду.",
+		"Santa Biblia en Castellano": "Santa Biblia en Castellano разработана для тех, кто хочет иметь с собой удобную библию повсюду.",
+		"Sagrada Biblia": "Sagrada Biblia разработана для тех, кто хочет иметь с собой удобную библию повсюду.",
+		"rn_sliding_view_description": "библиотека для react-native, позволяющая добавлять анимированные view (aka menu), включая drag'n'drop, кастомные стили, направления, анимации, etc.",
+		"zuma_description": "мессенджер с end-to-end шифрованием, поддерживающий чаты 1 - 1, групповые чаты, обмен текстом, аудио-, фото- и видеосообщениями. Приложение разработано для использования заказчиком внутри своей компании. Платформа: Android.",
+		"radix_description": "крипто-кошелек, поддерживающий покупку / продажу / конвертацию валюты, встроенный мессенджер, qr-считыватель, оповещения, etc. Платформы: iOS & Android."
+	},
+	"experience": {
+		"description": "Опыт работы перечислен в обратном порядке (от последнего к самому давнему).",
+		"position": "Должность",
+		"responsibility": "Деятельность",
+		"Integral": "ведение проектов, разработка мобильных приложений под iOS и Android, code review.",
+		"RuSoft": "разработка мобильных и веб-приложений",
+		"Freelance": "разработка веб приложений (React, Node, Next, Vanilla JS)"
+	},
+	"skills": {
+		"mobile_development": "Мобильная разработка",
+		"web_development": "Веб-разработка",
+		"common": "Общее",
+		"mobile_skills": {
+			"title": "Мобильная разработка",
+			"0": "React-Native, экосистема React (hooks, redux, thunks, sagas, apollo, mobX, navigation libs, etc.)",
+			"1": "Swift, экосистема iOS-dev",
+			"2": "Тестирование кода (Jest, enzyme, test-renderer)"
+		},
+		"web_skills": {
+			"title": "Веб-разработка",
+			"0": "JavaScript (ES6, ES7), React, паттерны",
+			"1": "Тестирование кода (Jest, enzyme, test-renderer)",
+			"2": "Опыт интеграции с соц. сетями (API Facebook, Twitter, Paypal, Whatsapp, Gmail), yandex-metrics, google-analytics, etc"
+		},
+		"common_skills": {
+			"title": "Общие навыки",
+			"0": "Знание ООП и функционального программирования",
+			"1": "Опыт в поддержке легаси кода, рефакторинга и code review",
+			"2": "Алгоритмы и структуры данных",
+			"3": "Знание гит, работа по гит-флоу",
+			"4": "Мобильная и веб разработки. Серверная разработка (node.js)",
+			"5": "Хорошее понимание клиент-серверной архитектуры",
+			"6": "Языки, на которых есть опыт: Swift, Javascript, Java",
+			"7": "Английский язык: upper intermediate"
+		}
+	},
+	"education": {
+		"university": "Университет",
+		"faculty": "Факультет",
+		"specialization": "Специализация",
+		"degree": "Степень",
+		"0": {
+			"university": "Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики, Санкт-Петербург",
+			"faculty": "Академия ЛИМТУ",
+			"specialization": "Веб-технологии",
+			"degree": "Магистр"
+		},
+		"1": {
+			"university": "Санкт-Петербургский государственный университет телекоммуникаций им. проф. М.А. Бонч-Бруевича, Санкт-Петербург",
+			"faculty": "ИКСС",
+			"specialization": "Инфокоммуникационные системы и сети связи",
+			"degree": "Бакалавр"
+		},
+		"2": {
+			"university": "Санкт-Петербургский государственный университет телекоммуникаций им. проф. М.А. Бонч-Бруевича, Санкт-Петербург",
+			"faculty": "Институт военного образования",
+			"specialization": "Наземная спутниковая связь",
+			"degree": "Доп. высшее образование"
+		}
+	},
+	"contacts": {
+		"title": "Связаться со мной можно следующими способами"
 	}
-}s
+}
