--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+	"page_title": "Egor Deryabin",
 	"header": {
 		"title": "Greetings! Let's get acquainted.",
 		"subtitle": "(and perhaps work together)",
