--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
+	"page_title": "Дерябин Егор",
 	"header": {
 		"title": "Приветствую! Давайте познакомимся.",
 		"subtitle": "(и, может быть, вместе поработаем)",
