--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -36,7 +36,8 @@
 		"Sagrada Biblia": "Sagrada Biblia разработана для тех, кто хочет иметь с собой удобную библию повсюду.",
 		"rn_sliding_view_description": "библиотека для react-native, позволяющая добавлять анимированные view (aka menu), включая drag'n'drop, кастомные стили, направления, анимации, etc.",
 		"zuma_description": "мессенджер с end-to-end шифрованием, поддерживающий чаты 1 - 1, групповые чаты, обмен текстом, аудио-, фото- и видеосообщениями. Приложение разработано для использования заказчиком внутри своей компании. Платформа: Android.",
-		"radix_description": "крипто-кошелек, поддерживающий покупку / продажу / конвертацию валюты, встроенный мессенджер, qr-считыватель, оповещения, etc. Платформы: iOS & Android."
+		"radix_description": "крипто-кошелек, поддерживающий покупку / продажу / конвертацию валюты, встроенный мессенджер, qr-считыватель, оповещения, etc. Платформы: iOS & Android.",
+		"radix_website": "Сайт проекта"
 	},
 	"experience": {
 		"description": "Опыт работы перечислен в обратном порядке (от последнего к самому давнему).",
@@ -44,7 +45,8 @@
 		"responsibility": "Деятельность",
 		"Integral": "ведение проектов, разработка мобильных приложений под iOS и Android, code review.",
 		"RuSoft": "разработка мобильных и веб-приложений",
-		"Freelance": "разработка веб приложений (React, Node, Next, Vanilla JS)"
+		"Freelance": "разработка веб приложений (React, Node, Next, Vanilla JS)",
+		"go_to_website": "Перейти на сайт"
 	},
 	"skills": {
 		"mobile_development": "Мобильная разработка",
