--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,8 +16,9 @@
 	"about": {
 		"title": "Коротко о себе.",
 		"first__text": "Занимаюсь разработкой приложений последние 4 года. Из них большую часть — мобильными приложениями. Начинал карьеру как веб-разработчик (преимущественно frontend), писал веб-приложения на Vanilla JS, React и NextJS. Позже пробовал писать гибридные мобильные приложения, используя Apache Cordova (PhoneGap), но достаточно быстро переключился на нативные кроссплатформенные приложения на React-Native. Параллельно с основной работой занимаюсь веб-приложения и нативными приложениями на iOS (Swift).",
-		"second__text": "Много путешествую и достаточно часто переезжаю, поэтому, как правило, не привязываюсь к конкретному часовому поясу. На текущий момент являюсь ведущим разработчиком мобильных приложений в компании Integral (подробнее раздел \"Опыт\"). Если Вы читаете этот текст, скорее всего я открыт для предложений о совместном сотрудничестве.",
-		"third__text": "В разделе портфолио можно ознакомиться с моими работами. Так как на данный момент я работаю в основном с мобильными приложениями, проекты, связанные с веб-разработкой, не включены в перечень."
+		"second__text": "При проектировании и написании приложений основное внимание уделяю выстраиванию грамотной архитектуры, написанию качественного безопасного кода, который можно легко тестировать, поддерживать и читать. Если речь идет о JavaScript, обязательно использую TypeScript или FlowJS для типизации, чтобы сгладить недостатки динамического языка и сделать код более безопасным и читаемым.",
+		"third__text": "Много путешествую и достаточно часто переезжаю, поэтому, как правило, не привязываюсь к конкретному часовому поясу. На текущий момент являюсь ведущим разработчиком мобильных приложений в компании Integral (подробнее раздел \"Опыт\"). Если Вы читаете этот текст, скорее всего я открыт для предложений о совместном сотрудничестве.",
+		"fourth__text": "В разделе портфолио можно ознакомиться с моими работами. Так как на данный момент я работаю в основном с мобильными приложениями, проекты, связанные с веб-разработкой, не включены в перечень."
 	},
 	"portfolio": {
 		"description": "Ниже перечислены приложения, зарелизенные в Google Play / App Store, open-source проекты, а также приложения, не доступные в мобильных сторах (частные приложения, либо находящиеся на этапе разработки / тестирования).",
